[package]
name = "rapture"
version = "0.2.0"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A cross platform install script library / package manager"
homepage = "https://github.com/adam-mcdaniel/rapture"
repository = "https://github.com/adam-mcdaniel/rapture"

[[bin]]
name = "rapt"
path = "src/bin.rs"


[dependencies]
clap = "2.33.0"
os_info = "1.1.1"
dirs = "2.0.1"
walkdir = "2.2.8"
encoding = "0.2.33"
hex_d_hex = "1.0.1"